--- a/UpdateMe/app/src/main/res/values/strings.xml
+++ b/UpdateMe/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
 
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="header">Job Positions</string>
+    <string name="no_match">Sorry, your search does not match anything!</string>
 </resources>
