--- a/UpdateMe/app/src/main/res/values/strings.xml
+++ b/UpdateMe/app/src/main/res/values/strings.xml
@@ -16,7 +16,7 @@
 
     <string name="stock_symbol">Enter Symbol</string>
     <string name="enter_stock_symbol">Enter</string>
-    <string name="stock_symbol_list">Stock Symbols and Quotes</string>
+    <string name="stock_symbol_list">Investments</string>
     <string name="change_stock_symbol">Change</string>
     <string name="ok">OK</string>
     <string name="cancel">Cancel</string>
@@ -25,16 +25,16 @@
     <string name="delete_all_symbol">Delete All Symbol</string>
     <string name="confirm_action">Are You Sure?</string>
     <string name="get_stock_quote">Quote</string>
-    <string name="go_to_website">Web</string>
+    <string name="go_to_website">More Info</string>
     <string name="yahoo_stock_url">https://finance.yahoo.com/q?s=</string>
     <string name="stock_company_name">Company Name:</string>
-    <string name="stock_year_low">Year Low:</string>
-    <string name="stock_year_high">Year High:</string>
-    <string name="stock_days_low">Day Low:</string>
-    <string name="stock_days_high">Day High:</string>
-    <string name="last_trade_price_only">Price:</string>
-    <string name="change">Change:</string>
-    <string name="days_range">Daily Price Range:</string>
+    <string name="stock_year_low">Year Low: $</string>
+    <string name="stock_year_high">Year High: $</string>
+    <string name="stock_days_low">Day Low: $</string>
+    <string name="stock_days_high">Day High: $</string>
+    <string name="last_trade_price_only">Price: $</string>
+    <string name="change">Change: $</string>
+    <string name="volume">Volume: </string>
     <string name="title_activity_stock_info">StockInfoActivity</string>
 
 </resources>
