--- a/UpdateMe/app/src/main/res/values/strings.xml
+++ b/UpdateMe/app/src/main/res/values/strings.xml
@@ -36,5 +36,7 @@
     <string name="change">Change:</string>
     <string name="days_range">Daily Price Range:</string>
     <string name="title_activity_stock_info">StockInfoActivity</string>
+    <string name="keyword">Type in keyword</string>
+    <string name="location">Type in the location</string>
 
 </resources>
